# ies_rescale

./: CMakeLists.txt  LICENSE  README.md
src/: ies_rescale.cpp  ies_rescale.h
test/: ies_rescale_test.cpp
test/test_ies_profiles/: Invalid Profile - 01.ies  Truncated Profile - 01.IES
